
[package]
name = "more-wallpapers-fallback"
version = "5.0.0"
edition = "2021"
description = "Private implementation detail of more-wallpapers"
repository = "https://github.com/LuckyTurtleDev/wallpaper.rs"
include = ["/src/**/*.rs", "/unlicense"]
license = "Unlicense"

[lib]
name = "wallpaper"

[dependencies]
dirs = { version = "1", optional = true }
thiserror = "1"
reqwest = { version = "0.11", optional = true, features = ["blocking"] }

[target.'cfg(unix)'.dependencies]
enquote = "1"

[target.'cfg(all(unix, not(target_os = "macos")))'.dependencies]
rust-ini = "0.12"
dirs = "1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser"] }
winreg = "0.9"
